[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Village/WaterBuilding.gd" type="Script" id=1]
[ext_resource path="res://UIpack/UI/blue_button13.png" type="Texture" id=2]
[ext_resource path="res://UIpack/UI/blue_button04.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Village/Building_ProgBar.gd" type="Script" id=4]
[ext_resource path="res://Fontpack/Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Tileset/BuildingSprites.tres" type="TileSet" id=6]
[ext_resource path="res://Scripts/Village/BldgImg.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Village/level2_waterimg.gd" type="Script" id=8]
[ext_resource path="res://UIpack/UI/blue_button00.png" type="Texture" id=9]
[ext_resource path="res://Scripts/Village/levelupbar_water.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Extra Spacing", "Font", "Font/fallback", "Settings" ]

[node name="WaterBuilding" type="Sprite" index="0"]

position = Vector2( 535.987, 257.111 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Building_UI" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -116.0
margin_top = -117.0
margin_right = 122.0
margin_bottom = 101.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Building_ProgBar" type="TextureProgress" parent="Building_UI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 22.0
margin_top = 6.0
margin_right = 212.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 2 )
texture_over = null
texture_progress = ExtResource( 3 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
script = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="Building_Name" type="RichTextLabel" parent="Building_UI" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 27.0
margin_top = 159.0
margin_right = 221.0
margin_bottom = 208.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "WaterBuilding"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="BldgImg" type="TileMap" parent="." index="1"]

mode = 0
tile_set = ExtResource( 6 )
cell_size = Vector2( 18, 18 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -65539, 2, 0, -65538, 2, 0, -65537, 2, 0, -131072, 2, 0, -131071, 2, 0, -131070, 2, 0, -3, 2, 0, -2, 2, 0, -1, 2, 0, -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, 65533, 2, 0, 65534, 2, 0, 65535, 2, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 131069, 2, 0, 131070, 2, 0, 131071, 2, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0 )
script = ExtResource( 7 )
_sections_unfolded = [ "Cell" ]

[node name="LevelUpScheme" type="Control" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="level2_waterimg" type="TileMap" parent="LevelUpScheme" index="0"]

mode = 0
tile_set = ExtResource( 6 )
cell_size = Vector2( 18, 18 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -393219, 2, 0, -393217, 2, 0, -458752, 2, 0, -458750, 2, 0, -327683, 2, 0, -327682, 4, 0, -327681, 4, 0, -393216, 4, 0, -393215, 4, 0, -393214, 2, 0, -262147, 2, 0, -262146, 4, 0, -262145, 2, 0, -327680, 2, 0, -327679, 4, 0, -327678, 2, 0, -196611, 2, 0, -196610, 4, 0, -196609, 2, 0, -262144, 2, 0, -262143, 4, 0, -262142, 2, 0, -131075, 2, 0, -131074, 2, 0, -131073, 2, 0, -196608, 2, 0, -196607, 2, 0, -196606, 2, 0 )
script = ExtResource( 8 )
_sections_unfolded = [ "Cell" ]

[node name="levelupbar_water" type="TextureProgress" parent="LevelUpScheme" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -94.0
margin_top = -233.0
margin_right = 96.0
margin_bottom = -184.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 2 )
texture_over = null
texture_progress = ExtResource( 9 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
script = ExtResource( 10 )
_sections_unfolded = [ "Textures" ]

[connection signal="upgrade_water_building" from="." to="LevelUpScheme/levelupbar_water" method="_on_WaterBuilding_upgrade_water_building"]

[connection signal="building_complete" from="Building_UI/Building_ProgBar" to="." method="_on_Building_ProgBar_building_complete"]

[connection signal="building_complete" from="Building_UI/Building_ProgBar" to="BldgImg" method="_on_Building_ProgBar_building_complete"]

[connection signal="upgrade_water_bldg_complete" from="LevelUpScheme/levelupbar_water" to="." method="_on_levelupbar_water_upgrade_water_bldg_complete"]

[connection signal="upgrade_water_bldg_complete" from="LevelUpScheme/levelupbar_water" to="LevelUpScheme/level2_waterimg" method="_on_levelupbar_water_upgrade_water_bldg_complete"]


